Hero:Fix Overflow Issue/Footer: Fix desktop version

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,18 +1,17 @@
 .footer {
   background-color: $darkBlue;
+  text-align: center;
 
-  
   &__grid {
     display: grid;
     width:100%;
     justify-items: center;
 
     @include breakpoint-up (large) {
-      grid-template-columns: 1fr .5fr .5fr 2fr;
-      grid-row: auto;
+      grid-template-columns: 1fr 1fr 1fr 2fr;
+      grid-row: 1fr 1fr;
       justify-items: center;
-      grid-template-areas: "logo link1 link2 button"
-                            "scoialIcon whitespace1 whitespace2 copyright";
+      
     } 
   }
 
@@ -20,17 +19,18 @@
     @include breakpoint-up(large){
       grid-column: 1/2;
       grid-row: 1/2;
-      padding:0;
+
     }
     
     img {
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
     }
   }
 
   &__socialIcon {
     display: flex;
     flex-direction: row;
+    padding-bottom:2.25rem;
 
     @include breakpoint-up(large) {
       grid-column: 1/2;
@@ -39,7 +39,7 @@
     }
     
     a:not(:last-child) {
-      padding-right: 2.1rem;
+      padding-right: 1.5rem;
     }
 
   }
@@ -47,11 +47,16 @@
   &__links {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    line-height: 1.25rem;
 
     a {
       color:$white;
+      text-align: center;
       transition: color 300ms ease-in-out;
+
+      @include breakpoint-up(large){
+        text-align: left;
+      }
 
       &:hover {
         color: $grayishBlue;
@@ -59,36 +64,43 @@
     }
 
     a:not(:last-child) {
-      padding-bottom: 1rem;
+      padding-bottom: 1.25rem;
     }
 
+    
+
     @include breakpoint-up (large) {
+
       .desktop-first-column {
         grid-column: 2/3;
         grid-row: 1/3;
-
       }
   
       .desktop-second-column {
-        grid-column: 3/4;
+        grid-column: 2/3;
         grid-row: 1/3;
       }
     }
   }
 
-  
 
   &__button{
+    padding-top: 2.25rem;
 
     @include breakpoint-up (large) {
-      grid-area: button;
+      grid-column: 4/5;
+      grid-row: 1/2;
+      padding-top: 0;
     } 
   }
 
   &__copyright {
+    padding:2.25rem 0;
 
     @include breakpoint-up (large){
-      grid-area: copyright;
+      grid-column: 4/5;
+      grid-row: 2/3;
+      padding:0;
     }
   }
 }
